WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
64557
REGRESSION: Should not dispatch didFirstVisuallyNonEmptyLayout for the initial empty document
https://bugs.webkit.org/show_bug.cgi?id=64557
Summary
REGRESSION: Should not dispatch didFirstVisuallyNonEmptyLayout for the initia...
Antti Koivisto
Reported
2011-07-14 13:45:27 PDT
If layout happens when a frame is showing the initial empty document we end up dispatching didFirstVisuallyNonEmptyLayout for it. This may be unexpected for clients. Regressed in
http://trac.webkit.org/changeset/90900
Attachments
patch
(1.45 KB, patch)
2011-07-14 13:59 PDT
,
Antti Koivisto
kenneth
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2011-07-14 13:59:09 PDT
Created
attachment 100856
[details]
patch
Kenneth Rohde Christiansen
Comment 2
2011-07-14 14:05:30 PDT
Comment on
attachment 100856
[details]
patch LGTM
Antti Koivisto
Comment 3
2011-07-14 14:16:59 PDT
http://trac.webkit.org/changeset/91027
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug