REGRESSION: Should not dispatch didFirstVisuallyNonEmptyLayout for the initial empty document https://bugs.webkit.org/show_bug.cgi?id=64557

Reviewed by Kenneth Rohde Christiansen.

Avoid sending didFirstVisuallyNonEmptyLayout for the initial empty document of the frame. The
clients may not expect it and it doesn't make much sense in any case.

* page/FrameView.cpp:
(WebCore::FrameView::performPostLayoutTasks):



Canonical link: https://commits.webkit.org/80284@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@91027 268f45cc-cd09-0410-ab3c-d52691b4dbfc